# DynaMix-python

./: .gitignore  README.md  evaluate_dynamix.py  pyproject.toml
notebooks/: example_evaluation_DSR.ipynb  example_evaluation_TS.ipynb
src/dynamix/: __init__.py
src/dynamix/metrics/: __init__.py  metrics.py
src/dynamix/model/: __init__.py  dynamix.py  forecaster.py  preprocessing.py  preprocessing_utilities.py
src/dynamix/training/: __init__.py  teacher_forcing.py  training.py  training_setup.py
src/dynamix/training/settings/: defaults.json
src/dynamix/utilities/: __init__.py  data_generation.py  dataset.py  plotting.py  plotting_eval.py  utilities.py
