[project]
name = "DynaMix-python"
version = "0.1.0"
description = "True Zero-Shot Inference of Dynamical Systems Preserving Long-Term Statistics"
readme = "README.md"
license = "GPL-3.0-only"
license-files = [
    "LICENSE",
]

requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.19.0",
    "matplotlib>=3.4.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "safetensors>=0.4.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "statsmodels>=0.14.4",
    "torch>=1.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
    "jupyter>=1.0.0",
    "tqdm>=4.62.0",
]
